    - Added new feature (Tools -> Scan database... -> Resolve duplicate BibTeX keys) to
      search for duplicate keys and offer to generate new keys to resolve the duplicates.
      Instead of being listed in a warning dialog after opening a bib file, duplicate keys
      now trigger a dialog asking whether the user wants to resolve the duplicates.
    - Added check that ensures that application doesn't quit while a large save operation
      is still in progress. Shows wait message with cancel button.
    - Added apostrophe (') as illegal character in BibTeX keys.
    - Fixed bug in Move/rename file link feature that could cause the wrong link to be
      stored for certain directory structures.
    - Fixed bug: curly braces can now be used in arguments to formatters. 
2.6
    - Fixed IEEExplorer and ACM fetchers to adapt to web site changes.
    - Active preview (1 or 2) is now remembered.
    - Applied patch by Igor L. Chernyavsky. to prevent loss of entry selection after
      generating key.
    - Changed OpenDocument Spreadsheet export so the mimetype file is written correctly
      at the start of the zip file.
    - Fixed bug when importing preferences: custom export filters would not be updated
      after import.
    - Changed help page loading procedure so help pages can be loaded for plugin entry
      fetchers.
    - Made it possible to define customized entry types with either-or conditions on
      required fields, e.g. using a pseudo-field called "author/editor" will indicate
      that the entry requires either the "author" or the "editor" field set.
    - Fixed bug: entries of a customized type could be indicated as complete even if
      BibTeX key was not set.
    - Changed deletion process for some temporary files to avoid leftover files.
2.6b3
    - Added ScienceDirect entry fetcher that utilizes the BibSonomy scraper.
    - Changed non-native file dialog setting so files cannot be renamed. This prevents