@@ -10,18 +10,36 @@
     and unmark the selected entries, respectively, and you can also
     access these actions in the menus.</p>
 
-    <p>Note that marking is not the same as selecting entries.
+    <p>Marking is not the same as selecting entries.
     Marked entries behave differently from other entries in two
-    ways. First, they are always displayed with a yellow background
-    in the entry table. Second, they will float to the top of your
+    ways. First, they are always displayed with a different background
+    color in the entry table. Second, they will float to the top of your
     entry list, as long as your table is not sorted according to
     groups or a Float search.</p>
 
-    <p>Saving your database will preserve the markings.</p>
+    <p>The color each marked entry is displayed in depends on the marking
+    level of the entry, with the default colors ranging from yellow to red.
+    There are menu choices both for incrementing the marking level of the
+    selected entry or entries, and for directly setting the marking to a specific
+    level.</p>
 
     <p>Marking entries can be useful for instance if you need to do
     several searches without losing your first search results, or
     if you need to remember which articles or books to look more
     closely at.</p>
+    
+    <p>In addition to manually marking entries, JabRef can optionally auto-mark
+    the latest imported entries, and at the same time unmark the previous entries
+    marked in this way. Such entries will be shown in a different color
+    from manually marked entries - by default green. This feature is toggled under
+    <b>Options -> Preferences -> General</b></p>
+
+    <p>Marking of entries will be associated with your username, the same name as is
+    used to fill in the "owner" field of entries you create or import (this will by
+    default match your user name in the operating system, but can be changed under
+    <b>Options -> Preferences -> General</b>). Different users can mark entries
+    independently. Saving the database will preserve the markings.</p>
+
+
 </body>
 </html>
