@@ -37,16 +37,16 @@ import javax.swing.event.PopupMenuListener;
 import net.sf.jabref.groups.*;
 
 public class RightClickMenu extends JPopupMenu
-    implements PopupMenuListener {
+        implements PopupMenuListener {
 
     BasePanel panel;
     MetaData metaData;
     JMenu groupAddMenu = new JMenu(Globals.lang("Add to group")),
-        groupRemoveMenu = new JMenu(Globals.lang("Remove from group")),
-        groupMoveMenu = new JMenu(Globals.lang("Assign exclusively to group")), // JZTODO lyrics
-        typeMenu = new JMenu(Globals.lang("Change entry type"));
+            groupRemoveMenu = new JMenu(Globals.lang("Remove from group")),
+            groupMoveMenu = new JMenu(Globals.lang("Assign exclusively to group")), // JZTODO lyrics
+            typeMenu = new JMenu(Globals.lang("Change entry type"));
     JCheckBoxMenuItem
-        floatMarked = new JCheckBoxMenuItem(Globals.lang("Float marked entries"),
+            floatMarked = new JCheckBoxMenuItem(Globals.lang("Float marked entries"),
             Globals.prefs.getBoolean("floatMarkedEntries"));
 
     public RightClickMenu(BasePanel panel_, MetaData metaData_) {
@@ -59,89 +59,102 @@ public class RightClickMenu extends JPopupMenu
         // If only one entry is selected, get a reference to it for adapting the menu.
         BibtexEntry be = null;
         if (panel.mainTable.getSelectedRowCount() == 1)
-          be = panel.mainTable.getSelected().get(0);
+            be = panel.mainTable.getSelected().get(0);
 
         addPopupMenuListener(this);
 
         add(new AbstractAction(Globals.lang("Copy"), GUIGlobals.getImage("copy")) {
-                public void actionPerformed(ActionEvent e) {
-                    try {
-                        panel.runCommand("copy");
-                    } catch (Throwable ex) {}
-                }
-            });
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("copy");
+                } catch (Throwable ex) {}
+            }
+        });
         add(new AbstractAction(Globals.lang("Paste"), GUIGlobals.getImage("paste")) {
-                public void actionPerformed(ActionEvent e) {
-                    try {
-                        panel.runCommand("paste");
-                    } catch (Throwable ex) {}
-                }
-            });
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("paste");
+                } catch (Throwable ex) {}
+            }
+        });
         add(new AbstractAction(Globals.lang("Cut"), GUIGlobals.getImage("cut")) {
-                public void actionPerformed(ActionEvent e) {
-                    try {
-                        panel.runCommand("cut");
-                    } catch (Throwable ex) {}
-                }
-            });
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("cut");
+                } catch (Throwable ex) {}
+            }
+        });
 
         add(new AbstractAction(Globals.lang("Delete"), GUIGlobals.getImage("delete")) {
-                public void actionPerformed(ActionEvent e) {
-                    /*SwingUtilities.invokeLater(new Runnable () {
-                        public void run() {*/
-                            try {
-                                panel.runCommand("delete");
-                            } catch (Throwable ex) {}
-                        /*}
-                    }); */
+            public void actionPerformed(ActionEvent e) {
+                /*SwingUtilities.invokeLater(new Runnable () {
+             public void run() {*/
+                try {
+                    panel.runCommand("delete");
+                } catch (Throwable ex) {}
+                /*}
+               }); */
 
-                }
-            });
-            addSeparator();
+            }
+        });
+        addSeparator();
 
         add(new AbstractAction(Globals.lang("Export to clipboard")) {
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("exportToClipboard");
+                } catch (Throwable ex) {}
+            }
+        });
+        addSeparator();
+
+        JMenu markSpecific = JabRefFrame.subMenu("Mark specific color");
+        JabRefFrame frame = panel.frame;
+        for (int i=0; i<Util.MAX_MARKING_LEVEL; i++)
+            markSpecific.add(new MarkEntriesAction(frame, i).getMenuItem());
+
+        if (multiple) {
+            add(new AbstractAction(Globals.lang("Mark entries"), GUIGlobals.getImage("markEntries")) {
                 public void actionPerformed(ActionEvent e) {
                     try {
-                        panel.runCommand("exportToClipboard");
+                        panel.runCommand("markEntries");
+                    } catch (Throwable ex) {}
+                }
+            });
+
+            add(markSpecific);
+
+            add(new AbstractAction(Globals.lang("Unmark entries"), GUIGlobals.getImage("unmarkEntries")) {
+                public void actionPerformed(ActionEvent e) {
+                    try {
+                        panel.runCommand("unmarkEntries");
                     } catch (Throwable ex) {}
                 }
             });
             addSeparator();
-
-        if (multiple) {
-          add(new AbstractAction(Globals.lang("Mark entries"), GUIGlobals.getImage("markEntries")) {
-            public void actionPerformed(ActionEvent e) {
-              try {
-                panel.runCommand("markEntries");
-              } catch (Throwable ex) {}
-            }
-          });
-          add(new AbstractAction(Globals.lang("Unmark entries"), GUIGlobals.getImage("unmarkEntries")) {
-            public void actionPerformed(ActionEvent e) {
-              try {
-                panel.runCommand("unmarkEntries");
-              } catch (Throwable ex) {}
-            }
-          });
-          addSeparator();
         } else if (be != null) {
-          if (be.getField(BibtexFields.MARKED) == null)
-            add(new AbstractAction(Globals.lang("Mark entry"), GUIGlobals.getImage("markEntries")) {
-               public void actionPerformed(ActionEvent e) {
-                 try {
-                   panel.runCommand("markEntries");
-                 } catch (Throwable ex) {}
-               }
-             });
-           else
-             add(new AbstractAction(Globals.lang("Unmark entry"), GUIGlobals.getImage("unmarkEntries")) {
-               public void actionPerformed(ActionEvent e) {
-                 try {
-                   panel.runCommand("unmarkEntries");
-                 } catch (Throwable ex) {}
-               }
-             });
-           addSeparator();
+            if (be.getField(BibtexFields.MARKED) == null) {
+
+                add(new AbstractAction(Globals.lang("Mark entry"), GUIGlobals.getImage("markEntries")) {
+                    public void actionPerformed(ActionEvent e) {
+                        try {
+                            panel.runCommand("markEntries");
+                        } catch (Throwable ex) {}
+                    }
+                });
+
+                add(markSpecific);
+            } else {
+                add(markSpecific);
+                add(new AbstractAction(Globals.lang("Unmark entry"), GUIGlobals.getImage("unmarkEntries")) {
+                    public void actionPerformed(ActionEvent e) {
+                        try {
+                            panel.runCommand("unmarkEntries");
+                        } catch (Throwable ex) {}
+                    }
+                });
+            }
+            addSeparator();
         }
 
         add(new AbstractAction(Globals.lang("Open file"), GUIGlobals.getImage("openExternalFile")) {
@@ -153,36 +166,36 @@ public class RightClickMenu extends JPopupMenu
         });
 
         add(new AbstractAction(Globals.lang("Open PDF or PS"), GUIGlobals.getImage("openFile")) {
-                public void actionPerformed(ActionEvent e) {
-                    try {
-                        panel.runCommand("openFile");
-                    } catch (Throwable ex) {}
-                }
-            });
-
-            add(new AbstractAction(Globals.lang("Open URL or DOI"), GUIGlobals.getImage("www")) {
-              public void actionPerformed(ActionEvent e) {
+            public void actionPerformed(ActionEvent e) {
                 try {
-                  panel.runCommand("openUrl");
+                    panel.runCommand("openFile");
                 } catch (Throwable ex) {}
-              }
-            });
+            }
+        });
+
+        add(new AbstractAction(Globals.lang("Open URL or DOI"), GUIGlobals.getImage("www")) {
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("openUrl");
+                } catch (Throwable ex) {}
+            }
+        });
 
         add(new AbstractAction(Globals.lang("Copy BibTeX key")) {
-                public void actionPerformed(ActionEvent e) {
-                    try {
-                        panel.runCommand("copyKey");
-                    } catch (Throwable ex) {}
-                }
-            });
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("copyKey");
+                } catch (Throwable ex) {}
+            }
+        });
 
         add(new AbstractAction(Globals.lang("Copy")+" \\cite{"+Globals.lang("BibTeX key")+"}") {
-                public void actionPerformed(ActionEvent e) {
-                    try {
-                        panel.runCommand("copyCiteKey");
-                    } catch (Throwable ex) {}
-                }
-            });
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("copyCiteKey");
+                } catch (Throwable ex) {}
+            }
+        });
 
         addSeparator();
         populateTypeMenu();
@@ -190,12 +203,12 @@ public class RightClickMenu extends JPopupMenu
         add(typeMenu);
         add(new AbstractAction(Globals.lang("Plain text import"))
         {
-                public void actionPerformed(ActionEvent e) {
-                    try {
-                        panel.runCommand("importPlainText");
-                    } catch (Throwable ex) {}
-                }
-            });
+            public void actionPerformed(ActionEvent e) {
+                try {
+                    panel.runCommand("importPlainText");
+                } catch (Throwable ex) {}
+            }
+        });
         addSeparator(); // for "add/move/remove to/from group" entries (appended here)
 
         floatMarked.addActionListener(new ActionListener() {
@@ -214,7 +227,7 @@ public class RightClickMenu extends JPopupMenu
         typeMenu.removeAll();
         for (String key : BibtexEntryType.ALL_TYPES.keySet()){
             typeMenu.add(new ChangeTypeAction
-                             (BibtexEntryType.getType(key), panel));
+                    (BibtexEntryType.getType(key), panel));
         }
     }
 
@@ -222,35 +235,35 @@ public class RightClickMenu extends JPopupMenu
      * Set the dynamic contents of "Add to group ..." submenu.
      */
     public void popupMenuWillBecomeVisible(PopupMenuEvent e) {
-      BibtexEntry[] bes = panel.getSelectedEntries();
-      panel.storeCurrentEdit();
-      GroupTreeNode groups = metaData.getGroups();
-      if (groups == null) {
+        BibtexEntry[] bes = panel.getSelectedEntries();
+        panel.storeCurrentEdit();
+        GroupTreeNode groups = metaData.getGroups();
+        if (groups == null) {
+            groupAddMenu.setEnabled(false);
+            groupMoveMenu.setEnabled(false);
+            groupRemoveMenu.setEnabled(false);
+            return;
+        }
+
+        groupAddMenu.setEnabled(true);
+        groupMoveMenu.setEnabled(true);
+        groupRemoveMenu.setEnabled(true);
+        groupAddMenu.removeAll();
+        groupMoveMenu.removeAll();
+        groupRemoveMenu.removeAll();
+
+        if (bes == null)
+            return;
+        add(groupAddMenu);
+        add(groupMoveMenu);
+        add(groupRemoveMenu);
+
         groupAddMenu.setEnabled(false);
         groupMoveMenu.setEnabled(false);
         groupRemoveMenu.setEnabled(false);
-        return;
-      }
-
-      groupAddMenu.setEnabled(true);
-      groupMoveMenu.setEnabled(true);
-      groupRemoveMenu.setEnabled(true);
-      groupAddMenu.removeAll();
-      groupMoveMenu.removeAll();
-      groupRemoveMenu.removeAll();
-
-      if (bes == null)
-        return;
-      add(groupAddMenu);
-      add(groupMoveMenu);
-      add(groupRemoveMenu);
-
-      groupAddMenu.setEnabled(false);
-      groupMoveMenu.setEnabled(false);
-      groupRemoveMenu.setEnabled(false);
-      insertNodes(groupAddMenu,metaData.getGroups(),bes,true,false);
-      insertNodes(groupMoveMenu,metaData.getGroups(),bes,true,true);
-      insertNodes(groupRemoveMenu,metaData.getGroups(),bes,false,false);
+        insertNodes(groupAddMenu,metaData.getGroups(),bes,true,false);
+        insertNodes(groupMoveMenu,metaData.getGroups(),bes,true,true);
+        insertNodes(groupRemoveMenu,metaData.getGroups(),bes,false,false);
 
         addSeparator();
         floatMarked.setSelected(Globals.prefs.getBoolean("floatMarkedEntries"));
@@ -261,7 +274,7 @@ public class RightClickMenu extends JPopupMenu
      * @param move For add: if true, remove from previous groups
      */
     public void insertNodes(JMenu menu, GroupTreeNode node, BibtexEntry[] selection,
-                    boolean add, boolean move) {
+                            boolean add, boolean move) {
         final AbstractAction action = getAction(node,selection,add,move);
 
         if (node.getChildCount() == 0) {
@@ -269,7 +282,7 @@ public class RightClickMenu extends JPopupMenu
             setGroupFontAndIcon(menuItem, node.getGroup());
             menu.add(menuItem);
             if (action.isEnabled())
-                    menu.setEnabled(true);
+                menu.setEnabled(true);
             return;
         }
 
@@ -299,45 +312,45 @@ public class RightClickMenu extends JPopupMenu
     /** Sets the font and icon to be used, depending on the group */
     private void setGroupFontAndIcon(JMenuItem menuItem, AbstractGroup group) {
         if (Globals.prefs.getBoolean("groupShowDynamic")) {
-                menuItem.setFont(menuItem.getFont().deriveFont(group.isDynamic() ?
-                                Font.ITALIC : Font.PLAIN));
+            menuItem.setFont(menuItem.getFont().deriveFont(group.isDynamic() ?
+                    Font.ITALIC : Font.PLAIN));
         }
-            if (Globals.prefs.getBoolean("groupShowIcons")) {
-                    switch (group.getHierarchicalContext()) {
-                    case AbstractGroup.INCLUDING:
-                            menuItem.setIcon(GUIGlobals.getImage("groupIncluding"));
-                            break;
-                    case AbstractGroup.REFINING:
-                            menuItem.setIcon(GUIGlobals.getImage("groupRefining"));
-                            break;
-                    default:
-                            menuItem.setIcon(GUIGlobals.getImage("groupRegular"));
-                                break;
-                    }
+        if (Globals.prefs.getBoolean("groupShowIcons")) {
+            switch (group.getHierarchicalContext()) {
+                case AbstractGroup.INCLUDING:
+                    menuItem.setIcon(GUIGlobals.getImage("groupIncluding"));
+                    break;
+                case AbstractGroup.REFINING:
+                    menuItem.setIcon(GUIGlobals.getImage("groupRefining"));
+                    break;
+                default:
+                    menuItem.setIcon(GUIGlobals.getImage("groupRegular"));
+                    break;
             }
+        }
     }
 
     /**
      * @param move For add: if true, remove from all previous groups
      */
     private AbstractAction getAction(GroupTreeNode node, BibtexEntry[] selection,
-                    boolean add, boolean move) {
+                                     boolean add, boolean move) {
         AbstractAction action = add ? (AbstractAction) new AddToGroupAction(node, move,
                 panel) : (AbstractAction) new RemoveFromGroupAction(node, panel);
         AbstractGroup group = node.getGroup();
         if (!move) {
-                action.setEnabled(add ? group.supportsAdd() && !group.containsAll(selection)
-                        : group.supportsRemove() && group.containsAny(selection));
+            action.setEnabled(add ? group.supportsAdd() && !group.containsAll(selection)
+                    : group.supportsRemove() && group.containsAny(selection));
         } else {
-                action.setEnabled(group.supportsAdd());
+            action.setEnabled(group.supportsAdd());
         }
         return action;
     }
 
     public void popupMenuWillBecomeInvisible(PopupMenuEvent e) {
-      remove(groupAddMenu);
-      remove(groupMoveMenu);
-      remove(groupRemoveMenu);
+        remove(groupAddMenu);
+        remove(groupMoveMenu);
+        remove(groupRemoveMenu);
     }
 
     public void popupMenuCanceled(PopupMenuEvent e) {
@@ -345,16 +358,16 @@ public class RightClickMenu extends JPopupMenu
     }
 
     class ChangeTypeAction extends AbstractAction {
-      BibtexEntryType type;
-      BasePanel panel;
+        BibtexEntryType type;
+        BasePanel panel;
 
-      public ChangeTypeAction(BibtexEntryType type, BasePanel bp) {
-        super(type.getName());
-        this.type = type;
-        panel = bp;
-      }
-      public void actionPerformed(ActionEvent evt) {
-        panel.changeType(type);
-      }
+        public ChangeTypeAction(BibtexEntryType type, BasePanel bp) {
+            super(type.getName());
+            this.type = type;
+            panel = bp;
+        }
+        public void actionPerformed(ActionEvent evt) {
+            panel.changeType(type);
+        }
     }
 }
