@@ -98,6 +98,7 @@ Tools=&Tools
 Unabbreviate_journal_names=Unabbreviate_journal_names
 # Edit
 Undo=&Undo
+Mark_specific_color=M&ark_specific_color
 Unmark_all=Unmark_a&ll
 Unmark_entries=U&nmark_entries
 View=&View
