@@ -1,3 +1,5 @@
+    - Entries can now be marked in a series of different colors. Automarking of imported
+      entries is now done in separate color without affecting other marked entries.
     - Added new feature (Tools -> Scan database... -> Resolve duplicate BibTeX keys) to
       search for duplicate keys and offer to generate new keys to resolve the duplicates.
       Instead of being listed in a warning dialog after opening a bib file, duplicate keys
